examples/test/testpolicy2685.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2685
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key27: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value13
          key38: value29
          key47: value43
      podSelector:
        matchLabels:
          key43: value42
          key20: value4
